--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "git+https://github.com/ByOswaldo65/proyectoFinal.git"
   },
   "keywords": [
     "final",
@@ -21,9 +21,9 @@
   "author": "Pedro Benitez",
   "license": "ISC",
   "bugs": {
-    "url": ""
+    "url": "https://github.com/ByOswaldo65/proyectoFinal/issues"
   },
-  "homepage": "",
+  "homepage": "https://github.com/ByOswaldo65/proyectoFinal#readme",
   "dependencies": {
     "axios": "^1.2.1",
     "express": "^4.18.2",
